syntax = "proto3";

option csharp_namespace = "CarProject.API.Protos.User";

package user;

service UserService {
  rpc Register (RegisterRequest) returns (UserReply);
  rpc Login (LoginRequest) returns (UserReply);
  rpc GetUser (GetUserRequest) returns (UserReply);
  rpc UpdateUser (UpdateUserRequest) returns (UserReply);
  rpc UpdatePassword (UpdatePasswordRequest) returns (UserReply);
}

message RegisterRequest {
    string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  string role = 5;
  string phone= 6;
  string address = 7;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message GetUserRequest {
  string user_id = 1;
}

message UpdateUserRequest {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string address = 6; // ✅ Ajouté
}

message UpdatePasswordRequest {
  string user_id = 1;
  string current_password = 2;
  string new_password = 3;
}

message UserReply {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string address = 6;
  string role = 7;
  bool is_verified = 8;
  string created_at = 9;
}