syntax = "proto3";

option csharp_namespace = "CarProject.API.Protos.Vehicle";

package vehicle;

service VehicleService {
  rpc CreateVehicle (CreateVehicleRequest) returns (VehicleReply);
  rpc GetVehicleById (GetVehicleByIdRequest) returns (VehicleReply);
  rpc GetVehicleByVIN (GetVehicleByVINRequest) returns (VehicleReply);
  rpc GetVehiclesByBrand (GetVehiclesByBrandRequest) returns (VehiclesReply);
  rpc GetVehiclesByFuelType (GetVehiclesByFuelTypeRequest) returns (VehiclesReply);
  rpc GetVehiclesByGearbox (GetVehiclesByGearboxRequest) returns (VehiclesReply);
  rpc GetVehiclesByYear (GetVehiclesByYearRequest) returns (VehiclesReply);
  rpc GetVehiclesByMaxMileage (GetVehiclesByMaxMileageRequest) returns (VehiclesReply);
  rpc GetVehiclesByCriteria (GetVehiclesByCriteriaRequest) returns (VehiclesReply);
  rpc GetAllVehicles (Empty) returns (VehiclesReply);
  rpc DeleteVehicle (DeleteVehicleRequest) returns (DeleteReply);

  // Méthodes supplémentaires
  rpc GetVehiclesByUserId (GetVehiclesByUserIdRequest) returns (VehiclesReply);
}

message Empty {}

message CreateVehicleRequest {
  string brand = 1;
  string model = 2;
  string vin = 3;
  string fuel_type = 4;
  string gearbox = 5;
  int32 year = 6;
  int32 mileage = 7;
  string user_id = 8;
  double price_announced = 9;
  string location = 10;
  string state = 11;
}

message GetVehicleByIdRequest {
  string id = 1;
}

message GetVehicleByVINRequest {
  string vin = 1;
}

message GetVehiclesByBrandRequest {
  string brand = 1;
}

message GetVehiclesByFuelTypeRequest {
  string fuel_type = 1;
}

message GetVehiclesByGearboxRequest {
  string gearbox = 1;
}

message GetVehiclesByYearRequest {
  int32 year = 1;
}

message GetVehiclesByMaxMileageRequest {
  int32 max_mileage = 1;
}

message GetVehiclesByCriteriaRequest {
  string fuel_type = 1;
  string gearbox = 2;
  int32 max_mileage = 3;
}

message GetVehiclesByUserIdRequest {
  string user_id = 1;
}

message DeleteVehicleRequest {
  string id = 1;
}

message VehicleReply {
  string id = 1;
  string brand = 2;
  string model = 3;
  int32 year = 4;
  int32 kilometers = 5;
  string fuel_type = 6;
  double price_announced = 7;
  string location = 8;
  string vin = 9;
  int32 mileage = 10;
  string gearbox = 11;
  string user_id = 12;
  string state = 13;
}

message VehiclesReply {
  repeated VehicleReply vehicles = 1;
}

message DeleteReply {
  string message = 1;
}
